--- a/doc/diary/2019/3/3.ipynb
+++ b/doc/diary/2019/3/3.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## OSCAR paper for Data Science: Reviews corrections\n",
+    "## OSCAR paper for Data Science\n",
     "After Davids' revision of the paper I have made all the adjustments indicated in the paper.\n",
     "Plus an import Issue raised was regarding the version of OSCAR uploaded to Zenodo, since its description was not correctly linked to our paper, and its title was mentioning 'version 1.0'. The current version in Zenodo is V2.0.0, with DOI = https://doi.org/10.5281/zenodo.2587541  \n",
     "The final revision I made along with the [document reporting the answers to the reviewers comments](https://docs.google.com/document/d/15lZg3QxuJsk-P0oMkvM8ovrOpbJVZMtF4LfvNI4M36Q/edit?usp=sharing), have been sent to Silvio for another revision and conversion into HTML.   \n"
@@ -39,7 +39,8 @@
    "metadata": {},
    "source": [
     "I have started working on this right after our meeting. I just finished writing down all the sections mentioned in the scheme. Some parts still need to be revisionised. We will also need to analyse the log files of OpenCitations in order to write the 'Usage' section.  \n",
-    "I am planning to send a first draft of the paper to Silvio on monday."
+    "I am planning to send a first draft of the paper to Silvio on monday.  \n",
+    "The .odt file is currently on the git repository at: http://ivanhb.github.io/phd/paper/coci_iswc2019/article/coci_iswc2019.odt"
    ]
   },
   {
