--- a/project/phd/script/nb_1.ipynb
+++ b/project/phd/script/nb_1.ipynb
@@ -48,6 +48,36 @@
     "d_a = isodate.parse_duration('P6Y11M')\n",
     "d_b = isodate.parse_duration(\"P41Y1D\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IsADirectoryError",
+     "evalue": "[Errno 21] Is a directory: '../../../data/phd_thesis/dh_journals_analysis/dh_journals_cr_dois_all_data/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIsADirectoryError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-cf15397c2d3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpath_cr_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../../data/phd_thesis/dh_journals_analysis/dh_journals_cr_dois_all_data/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_cr_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIsADirectoryError\u001b[0m: [Errno 21] Is a directory: '../../../data/phd_thesis/dh_journals_analysis/dh_journals_cr_dois_all_data/'"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "path_cr_data = open(\"../../../data/phd_thesis/dh_journals_analysis/dh_journals_cr_dois_all_data/analysis_res2_2.json\")\n",
+    "data = json.load(json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
