--- a/project/phd/script/nb_1.ipynb
+++ b/project/phd/script/nb_1.ipynb
@@ -2,74 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dh_journals_cr_dois = open(\"../../../data/phd_thesis/dh_journals_analysis/dh_journals_cr_dois.csv\")\n",
+    "import json\n",
+    "import os\n",
     "\n",
-    "COCI_API_REFS = \"https://opencitations.net/index/coci/api/v1/references/%s\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = \"\"\n",
-    "req_call = call%issn_value\n",
-    "print(\"Calling ... \"+req_call+params)\n",
-    "response = requests.get(req_call+params)\n",
-    "res_dois = __dois\n",
+    "def gen_crossref_data():\n",
+    "    PATH = \"../../../data/phd_thesis/dh_cr_dois_all_data/analysis_res_ex2_%s.json\"\n",
+    "    for i in range(0,100):\n",
+    "        a_j_path = PATH%i\n",
+    "        if os.path.exists(a_j_path):\n",
+    "            json_file = open(a_j_path)\n",
+    "            list_data = json.load(json_file)\n",
     "\n",
-    "if response.status_code == 200:\n",
-    "    json_data = json.loads(response.content)"
+    "            tot_count = len(list_data)\n",
+    "            ref_list = []\n",
+    "            doi_refs_list = []\n",
+    "            nondoi_refs_list = []\n",
+    "            for a_obj in list_data:\n",
+    "                if \"reference\" in a_obj[\"message\"]:\n",
+    "                    obj_refs = a_obj[\"message\"][\"reference\"]\n",
+    "                    ref_list.append(len(obj_refs))\n",
+    "                    ref_with_doi = 0\n",
+    "                    for a_ref in obj_refs:\n",
+    "                        if \"DOI\" in a_ref:\n",
+    "                            ref_with_doi += 1\n",
+    "\n",
+    "                    doi_refs_list.append(ref_with_doi)\n",
+    "                    nondoi_refs_list.append(len(obj_refs) - ref_with_doi)\n",
+    "\n",
+    "            avg_ref = -1\n",
+    "            count_with_ref = len(ref_list)\n",
+    "            if count_with_ref > 0:\n",
+    "                avg_ref = sum(ref_list)/count_with_ref\n",
+    "\n",
+    "            avg_doi_refs = -1\n",
+    "            count = len(doi_refs_list)\n",
+    "            if count > 0:\n",
+    "                avg_doi_refs = sum(doi_refs_list)/count\n",
+    "\n",
+    "            avg_nondoi_refs = -1\n",
+    "            count = len(nondoi_refs_list)\n",
+    "            if count > 0:\n",
+    "                avg_nondoi_refs = sum(nondoi_refs_list)/count\n",
+    "\n",
+    "\n",
+    "            print(str(i)+\": #with refs: \"+str(count_with_ref)+ \n",
+    "                  \";\\n   out of: \"+ str(len(list_data))+\n",
+    "                  \";\\n   average ref: \"+str(round(avg_ref,2))+\n",
+    "                  \";\\n   average DOI refs: \"+str(round(avg_doi_refs,2))+\n",
+    "                  \";\\n   average non-DOI refs: \"+str(round(avg_nondoi_refs,2))+\n",
+    "                  \"\\n\"\n",
+    "            )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
-    "import isodate\n",
-    "d_a = isodate.parse_duration('P6Y11M')\n",
-    "d_b = isodate.parse_duration(\"P41Y1D\")"
+    "def store(str_content, dest_file, is_header = False):\n",
+    "    if is_header:\n",
+    "        if exists(dest_file):\n",
+    "            return \"Header is in already\"\n",
+    "    with open(dest_file, \"a\") as g:\n",
+    "        g.write(str_content+\"\\n\")\n",
+    "\n",
+    "def store_json(data, dest_file):\n",
+    "    with open(dest_file, 'w') as outfile:\n",
+    "        json.dump(data, outfile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IsADirectoryError",
-     "evalue": "[Errno 21] Is a directory: '../../../data/phd_thesis/dh_journals_analysis/dh_journals_cr_dois_all_data/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIsADirectoryError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-cf15397c2d3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpath_cr_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../../data/phd_thesis/dh_journals_analysis/dh_journals_cr_dois_all_data/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_cr_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIsADirectoryError\u001b[0m: [Errno 21] Is a directory: '../../../data/phd_thesis/dh_journals_analysis/dh_journals_cr_dois_all_data/'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'key': 'B14',\n",
+       " 'author': 'D’Alembert',\n",
+       " 'year': '1751',\n",
+       " 'article-title': 'Preliminary discourse',\n",
+       " 'volume-title': 'Encyclopédie, ou dictionnaire raisonné des sciences, des arts et des métiers, etc.'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import json\n",
-    "path_cr_data = open(\"../../../data/phd_thesis/dh_journals_analysis/dh_journals_cr_dois_all_data/analysis_res2_2.json\")\n",
-    "data = json.load(json_file)"
+    "all_ref[13]"
    ]
   },
   {
@@ -77,7 +105,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "store(\"id,doi\", dest_file, True)"
+   ]
   }
  ],
  "metadata": {
