--- a/project/retraction_analysis/script/nb.ipynb
+++ b/project/retraction_analysis/script/nb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -200,22 +199,60 @@
     "### Example from the retracted articles in Philosophy\n",
     "**Title:** \"Cancer Drugs In The United States: Justum Pretium—The Just Price\"  \n",
     "**DOI:** 10.1200/jco.2013.49.1845  \n",
-    "**Citations number:** 103  \n",
+    "**Citations number in COCI:** 103  \n",
     "**Retraction date:** 10/01/2015 (%m/%d/%Y)   \n",
     "**Retraction reasons:** +Criminal Proceedings+Falsification/Fabrication of Data+Investigation by Company/Institution+Investigation by Third Party+Misconduct - Official Investigation/Finding"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example from the retracted articles in History\n",
+    "**Title:** \"Warlords, Priests And The Politics Of Ethnic Cleansing: A Case-Study From Rural Bosnia Hercegovina\"  \n",
+    "**DOI:** 10.1080/014198700329114  \n",
+    "**Citations number in COCI:** 18  \n",
+    "**Publication date:** 2000  \n",
+    "**Retraction date:** 03/28/2014 (%m/%d/%Y)   \n",
+    "**Retraction reasons:** +Falsification/Fabrication of Data+Investigation by Company/Institution+Investigation by Journal/Publisher+Misconduct - Official Investigation/Finding+Misconduct by Author  \n",
+    "  \n",
+    "**Note:** While checking this article at its DOI \"https://doi.org/10.1080/014198700329114\" I found out that this article was published online on 2010 (and this is the actual date reported in Retracted Watch). But the actual publication date (as also reported in COCI) took place on 2000. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example from the retracted articles in Religion\n",
+    "**Title:** \"Retracted: Impact Of Spiritual Leadership On Unit Performance\"  \n",
+    "**DOI:** 10.1016/j.leaqua.2011.02.002  \n",
+    "**Citations number in COCI:** 40  \n",
+    "**Publication date:** 2011  \n",
+    "**Retraction date:** 04/27/2012, 07/30/2014, 10/01/2014 (%m/%d/%Y)   \n",
+    "**Retraction reasons:** +Error in Data +Unreliable Data+Unreliable Results+Upgrade/Update of Prior Notice  \n",
+    "  \n",
+    "**Note:** This article has been retracted multiple times. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Return Citations after the retraction date filter=creation:%3E2015-10-01\n",
+    "doi = \"10.1016/j.leaqua.2011.02.002\"\n",
+    "ex_id = \"3\"\n",
+    "#retraction_date = \"2015-10-01\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_cits = {}\n",
-    "\n",
-    "##Return Citations after the retraction date filter=creation:%3E2015-10-01\n",
-    "doi = \"10.1200/jco.2013.49.1845\"\n",
-    "retraction_date = \"2015-10-01\"\n",
     "\n",
     "#with filter\n",
     "#r = requests.get('https://opencitations.net/index/coci/api/v1/citations/'+str(doi)+\"?filter=creation:\"+str(cat[cat_k][\"operation\"])+str(retraction_date))\n",
@@ -228,13 +265,15 @@
     "            pattern = '%Y-%m'\n",
     "        if len(elem[\"creation\"]) < 7:\n",
     "            pattern = '%Y'\n",
-    "        \n",
-    "        all_cits[elem[\"citing\"]] = datetime.strptime(elem[\"creation\"],pattern)"
+    "        if len(elem[\"creation\"]) < 4:\n",
+    "            pattern = ''\n",
+    "        if pattern != '':\n",
+    "            all_cits[elem[\"citing\"]] = datetime.strptime(elem[\"creation\"],pattern)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,33 +283,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "xy_points = []\n",
     "index = {}\n",
     "for k,v in all_cits.items():\n",
-    "    xy_points.append({\"x\":v.year, \"y\": k})\n",
+    "    xy_points.append({\"date\":v.year, \"doi\": k})\n",
     "    \n",
-    "    index_k = str(v.year)+\"-\"+str(v.month)\n",
+    "    #index_k = str(v.year)+\"-\"+str(v.month)\n",
+    "    index_k = str(v.year)\n",
     "    if index_k not in index:\n",
     "        index[index_k] = 0\n",
     "    index[index_k] += 1\n",
     "\n",
     "xy_points_date_groups = []\n",
     "for k,v in index.items():\n",
-    "    xy_points_date_groups.append({\"x\":k, \"y\": v})"
+    "    xy_points_date_groups.append({\"date\":k, \"citations\": v})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_list(xy_points, \"../data/coci/coci_citations_ex1doi.csv\")\n",
-    "write_list(xy_points_date_groups, \"../data/coci/coci_citations_ex1doi_temp.csv\")"
+    "write_list(xy_points, \"../data/coci/coci_citations_ex\"+ex_id+\"doi.csv\")\n",
+    "write_list(xy_points_date_groups, \"../data/coci/coci_citations_ex\"+ex_id+\"doi_temp.csv\")"
    ]
   },
   {
