--- a/project/retraction_analysis/script/nb.ipynb
+++ b/project/retraction_analysis/script/nb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Citations: after and before Retraction\n",
+    "## DOIs\n",
     "Taking the previous results, the main object is to classify the citations into 3 different timeline steps, according to the retraction date: (1) Before (2) Same date (3) After. We consider also the \"Same date\" category, since some of the retracted document or/and the citations don't have a complete date description. e.g: Retracted article date = 2013, and a citation in the same year."
    ]
   },
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example from the retracted articles in Philosophy\n",
+    ">### Example from the retracted articles in Philosophy\n",
     "**Title:** \"Cancer Drugs In The United States: Justum Pretium—The Just Price\"  \n",
     "**DOI:** 10.1200/jco.2013.49.1845  \n",
     "**Citations number in COCI:** 103  \n",
@@ -208,14 +208,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example from the retracted articles in History\n",
+    ">### Example from the retracted articles in History\n",
     "**Title:** \"Warlords, Priests And The Politics Of Ethnic Cleansing: A Case-Study From Rural Bosnia Hercegovina\"  \n",
     "**DOI:** 10.1080/014198700329114  \n",
     "**Citations number in COCI:** 18  \n",
     "**Publication date:** 2000  \n",
     "**Retraction date:** 03/28/2014 (%m/%d/%Y)   \n",
-    "**Retraction reasons:** +Falsification/Fabrication of Data+Investigation by Company/Institution+Investigation by Journal/Publisher+Misconduct - Official Investigation/Finding+Misconduct by Author  \n",
-    "  \n",
+    "**Retraction reasons:** +Falsification/Fabrication of Data+Investigation by Company/Institution+Investigation by Journal/Publisher+Misconduct - Official Investigation/Finding+Misconduct by Author   \n",
     "**Note:** While checking this article at its DOI \"https://doi.org/10.1080/014198700329114\" I found out that this article was published online on 2010 (and this is the actual date reported in Retracted Watch). But the actual publication date (as also reported in COCI) took place on 2000. "
    ]
   },
@@ -223,32 +222,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example from the retracted articles in Religion\n",
+    ">### Example from the retracted articles in Religion\n",
     "**Title:** \"Retracted: Impact Of Spiritual Leadership On Unit Performance\"  \n",
     "**DOI:** 10.1016/j.leaqua.2011.02.002  \n",
     "**Citations number in COCI:** 40  \n",
     "**Publication date:** 2011  \n",
     "**Retraction date:** 04/27/2012, 07/30/2014, 10/01/2014 (%m/%d/%Y)   \n",
     "**Retraction reasons:** +Error in Data +Unreliable Data+Unreliable Results+Upgrade/Update of Prior Notice  \n",
-    "  \n",
     "**Note:** This article has been retracted multiple times. "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">### Example from the retracted articles in Arts\n",
+    "**Title:** \"The Effect Of Auditory Versus Visual Violent Media Exposure On Aggressive Behaviour: The Role Of Song Lyrics, Video Clips And Musical Tone\"  \n",
+    "**DOI:** 10.1016/j.jesp.2011.02.006  \n",
+    "**Citations number in COCI:** 14  \n",
+    "**Publication date:** 2011  \n",
+    "**Retraction date:** 08/11/2015(%m/%d/%Y)   \n",
+    "**Retraction reasons:** +Error in Data+Error in Methods+Error in Text+Investigation by Company/Institution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">### Example from the hard-science domain (Medicine)\n",
+    "**Title:** \"Ileal-lymphoid-nodular Hyperplasia, Non-specific Colitis, and Pervasive Developmental Disorder in Children\"  \n",
+    "**DOI:** 10.1016/S0140-6736(97)11096-0  \n",
+    "**Citations number in COCI:** --  \n",
+    "**Publication date:** 1999  \n",
+    "**Retraction date:** 03/06/2004, 02/06/2010 (%m/%d/%Y)   \n",
+    "**Retraction reasons:** +Falsification/Fabrication of Data+Investigation by Company/Institution+Investigation by Third Party+Lack of Approval from Company/Institution+Lack of IRB/IACUC Approval+Manipulation of Results+Upgrade/Update of Prior Notice"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "##Return Citations after the retraction date filter=creation:%3E2015-10-01\n",
-    "doi = \"10.1016/j.leaqua.2011.02.002\"\n",
-    "ex_id = \"3\"\n",
+    "doi = \"10.1016/S0140-6736(97)11096-0\"\n",
+    "ex_id = \"\"\n",
     "#retraction_date = \"2015-10-01\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,12 +329,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_list(xy_points, \"../data/coci/coci_citations_ex\"+ex_id+\"doi.csv\")\n",
-    "write_list(xy_points_date_groups, \"../data/coci/coci_citations_ex\"+ex_id+\"doi_temp.csv\")"
+    "write_list(xy_points, \"../result/hard_science/coci_citations.csv\")\n",
+    "write_list(xy_points_date_groups, \"../result/hard_science/coci_citations_temp.csv\")"
    ]
   },
   {
